<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity"
    android:background="@color/light_grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="35dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/dark_grey"
        android:text="@string/general" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_switch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/dark_grey"
        android:textSize="13sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="50dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_mode_switch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textColor="@color/dark_grey"
        android:textSize="13sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"/>

    <TextView
        android:id="@+id/about_us_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginStart="35dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/dark_grey"
        android:text="@string/about_us" />

    <TextView
        android:id="@+id/privacy_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginStart="35dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/dark_grey"
        android:text="@string/privacy_policy" />

    <TextView
        android:id="@+id/del_acc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginStart="35dp"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:text="@string/delete_account" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>