<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@color/light_grey">

    <EditText
        android:id="@+id/username_text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="490dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColorHint="#455A64"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="378dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title_password"
        android:inputType="textPassword"
        android:textColorHint="#455A64"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="230dp"
        android:text="@string/login"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple_700"
        android:layout_marginTop="470dp"
        android:text="@string/sign_up_underline"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#455A64"
        android:textSize="12sp" />


</RelativeLayout>