<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myrecipe.RecipeDetailsActivity"
    android:background="@color/light_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_save_recipe"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="17dp"
        android:layout_marginVertical="25dp"
        android:backgroundTint="@color/white"
        >

        <EditText
            android:id="@+id/recipe_name_txt"
            android:layout_width="373dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:hint="@string/recipe_name"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/time_title"
            android:textSize="19sp"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/recipe_time_txt"
            android:layout_width="373dp"
            android:layout_height="50dp"
            android:hint="@string/time_length"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/ingre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ingredients"
            android:textSize="19sp"/>

        <EditText
            android:id="@+id/ingred_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="top"
            android:padding="10dp"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/proce_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/proce_title"
            android:textSize="19sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/proce_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="top"
            android:padding="10dp"
            android:background="@drawable/border"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_recipe"
        android:background="@drawable/ic_delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>