<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".video.VideoRecipeActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/video_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recipe_name"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/video_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Time:"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/video_recipe_time_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_40_50_minutes"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/video_ingred_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ingredients"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/video_recipe_ingre_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/brownies_ingre"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/video_proced_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Procedures:"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/video_recipe_proce_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/brownies_proced"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>