<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_grey">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu"
        android:background="@color/light_grey"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/recent"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/dark_grey"/>

    <ImageView
        android:id="@+id/home_bg"
        android:layout_width="401dp"
        android:layout_height="223dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/home_bg" />

    <ImageButton
        android:id="@+id/my_recipe_btn"
        android:layout_width="332dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:background="@drawable/my_recipe"
        android:contentDescription="@string/my_recipe"
        android:text="@string/my_recipe"
        android:textSize="12sp"
        tools:ignore="TextContrastCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/my_fav_btn"
        android:layout_width="332dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:background="@drawable/my_fav"
        android:contentDescription="@string/my_recipe"
        android:text="@string/my_recipe"
        android:textSize="12sp"
        tools:ignore="TextContrastCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/my_acc_btn"
        android:layout_width="332dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:background="@drawable/my_acc"
        android:contentDescription="@string/my_account"
        android:text="@string/my_recipe"
        android:textSize="12sp"
        tools:ignore="TextContrastCheck,ImageContrastCheck" />

</RelativeLayout>